--- a/README.rdoc
+++ b/README.rdoc
@@ -11,7 +11,7 @@ from the ICU Transliteration API. These are added as simple methods on String.
 
   ["cafe", "cafes", "caf\303\251"].sort
   => ["cafe", "cafes", "caf\303\251"]
-   
+
   require 'icunicode'
 
   ["cafe", "cafes", "caf\303\251"].sort_by {|s| s.unicode_sort_key}
@@ -25,14 +25,7 @@ from the ICU Transliteration API. These are added as simple methods on String.
 
 == Install:
 
-You must install ICU first. You can download the source from http://site.icu-project.org/download,
-or on Mac, you can install with MacPorts:
-
-  sudo port install icu
-
-Then install the gem:
-
-  sudo gem install ninjudd-icunicode -s http://gems.github.com
+  sudo gem install icunicode
 
 == To do:
 
